# web3-trading-agent

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md
backend/: config.py  main.py
backend/db/: models.py
backend/models/: decision.py  trade.py
backend/services/: __init__.py  encrypt_client.py  position_manager.py  trade_executor.py
contracts/: deployments-hardhat.json  deployments-localhost.json
contracts/artifacts/@openzeppelin/contracts/security/ReentrancyGuard.sol/: ReentrancyGuard.dbg.json
contracts/artifacts/@openzeppelin/contracts/token/ERC721/extensions/IERC721Metadata.sol/: IERC721Metadata.dbg.json
contracts/artifacts/@openzeppelin/contracts/utils/math/SignedMath.sol/: SignedMath.dbg.json
contracts/artifacts/src/AgentRegistry.sol/: AgentRegistry.json
contracts/artifacts/src/TradeExecutor.sol/: ISwapRouter.json  TradeExecutor.json
contracts/artifacts/src/ValidationRegistry.sol/: ValidationRegistry.dbg.json  ValidationRegistry.json
contracts/cache/: solidity-files-cache.json
docs/: demo_script.md
e2e-encrypt/: Cargo.toml
e2e-encrypt/src/: main.rs
e2e-ika/src/: main.rs
frontend/src/app/: globals.css  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/model/: page.tsx
frontend/src/components/: ActivityFeed.tsx  DWalletCard.tsx  EncryptCard.tsx  HeroBanner.tsx  Navbar.tsx  Pipeline.tsx  PriceChart.tsx  RejectionShowcase.tsx
frontend/src/lib/: api.ts  types.ts
programs/vapm_decisions/: Cargo.toml
programs/vapm_decisions/src/: encrypt_fns.rs  lib.rs
scripts/: run_demo.sh
