[workspace]

[package]
name = "vapm-e2e-encrypt"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "vapm-e2e-encrypt"
path = "src/main.rs"

[dependencies]
encrypt-solana-client = { git = "https://github.com/dwallet-labs/encrypt-pre-alpha" }
encrypt-types = { git = "https://github.com/dwallet-labs/encrypt-pre-alpha" }
solana-sdk = "4"
solana-rpc-client = "4.0.0-beta.3"
solana-commitment-config = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
bs58 = "0.5"
hex = "0.4"
serde_json = "1"
bincode = "1"
